// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`контракт машинного вывода > instructions по одному артефакту > instructions: ключи artifact 1`] = `
[
  "description",
  "id",
  "status",
]
`;

exports[`контракт машинного вывода > instructions по одному артефакту > instructions: ключи data 1`] = `
[
  "artifact",
  "blockedBy",
  "change",
  "context",
  "dependencies",
  "instruction",
  "language",
  "languageExplicit",
  "model",
  "nextStep",
  "outputKind",
  "outputVersion",
  "provider",
  "resolvedOutputPath",
  "role",
  "rules",
  "schema",
  "template",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода > instructions по одному артефакту > instructions: ключи dependencies 1`] = `
[
  "id",
  "resolvedOutputPath",
  "status",
]
`;

exports[`контракт машинного вывода > status по всему рабочему пространству > status: ключи changes 1`] = `
[
  "artifactsDone",
  "artifactsTotal",
  "isPlanningComplete",
  "name",
  "schema",
]
`;

exports[`контракт машинного вывода > status по всему рабочему пространству > status: ключи data 1`] = `
[
  "changes",
  "nextStep",
  "outputVersion",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода > status по одному change > status --change: ключи artifacts 1`] = `
[
  "blockedBy",
  "description",
  "id",
  "model",
  "outputKind",
  "requires",
  "resolvedOutputPath",
  "role",
  "status",
]
`;

exports[`контракт машинного вывода > status по одному change > status --change: ключи data 1`] = `
[
  "artifacts",
  "change",
  "isPlanningComplete",
  "nextStep",
  "outputVersion",
  "schema",
  "stages",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода > status по одному change > status --change: ключи stages 1`] = `
[
  "model",
  "provider",
  "role",
  "stage",
]
`;

exports[`контракт машинного вывода > validate по одному change > validate: ключи data 1`] = `
[
  "findings",
  "nextStep",
  "outputVersion",
  "strict",
  "summary",
  "target",
]
`;

exports[`контракт машинного вывода > validate по одному change > validate: ключи findings 1`] = `
[
  "file",
  "level",
  "line",
  "message",
  "rule",
]
`;

exports[`контракт машинного вывода > validate по одному change > validate: ключи summary 1`] = `
[
  "errors",
  "warnings",
]
`;

exports[`контракт машинного вывода > отказ при машинном выводе > отказ: ключи data 1`] = `
[
  "error",
  "nextStep",
  "outputVersion",
]
`;

exports[`контракт машинного вывода > отказ при машинном выводе > отказ: ключи error 1`] = `
[
  "code",
  "message",
]
`;

exports[`контракт машинного вывода ворот > check evidence > check evidence: ключи data 1`] = `
[
  "change",
  "findings",
  "labels",
  "nextStep",
  "outputVersion",
  "summary",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода ворот > check evidence > check evidence: ключи findings 1`] = `
[
  "file",
  "level",
  "line",
  "message",
  "rule",
]
`;

exports[`контракт машинного вывода ворот > check evidence > check evidence: ключи labels 1`] = `
[
  "command",
  "head",
  "label",
  "recordedAt",
  "state",
]
`;

exports[`контракт машинного вывода ворот > check evidence > check evidence: ключи summary 1`] = `
[
  "checked",
  "fresh",
]
`;

exports[`контракт машинного вывода ворот > check plan > check plan: ключи data 1`] = `
[
  "change",
  "findings",
  "nextStep",
  "outputVersion",
  "summary",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода ворот > check plan > check plan: ключи findings 1`] = `
[
  "file",
  "level",
  "line",
  "message",
  "rule",
]
`;

exports[`контракт машинного вывода ворот > check plan > check plan: ключи summary 1`] = `
[
  "coverage",
  "identifiers",
  "placeholders",
]
`;

exports[`контракт машинного вывода ворот > evidence record > evidence record: ключи data 1`] = `
[
  "change",
  "findings",
  "label",
  "nextStep",
  "outputVersion",
  "record",
  "summary",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода ворот > evidence record > evidence record: ключи findings 1`] = `
[
  "file",
  "level",
  "line",
  "message",
  "rule",
]
`;

exports[`контракт машинного вывода ворот > evidence record > evidence record: ключи record 1`] = `
[
  "command",
  "durationMs",
  "exitCode",
  "head",
  "outputTail",
  "outputTruncated",
  "startedAt",
  "worktreeDigest",
]
`;

exports[`контракт машинного вывода ворот > evidence record > evidence record: ключи summary 1`] = `
[
  "failed",
  "recorded",
]
`;

exports[`контракт машинного вывода ворот > verify > verify: ключи data 1`] = `
[
  "change",
  "findings",
  "nextStep",
  "notChecked",
  "outputVersion",
  "summary",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода ворот > verify > verify: ключи findings 1`] = `
[
  "file",
  "level",
  "line",
  "message",
  "rule",
]
`;

exports[`контракт машинного вывода ворот > verify > verify: ключи summary 1`] = `
[
  "openTasks",
  "requirementsWithoutTrace",
  "staleLabels",
]
`;

exports[`контракт машинного вывода инициализации > init со списком инструментов > init: ключи data 1`] = `
[
  "created",
  "nextStep",
  "notes",
  "outputVersion",
  "removed",
  "unchanged",
  "unmanaged",
  "updated",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода проверки установки > doctor на здоровой установке > doctor: имена и заголовки условий 1`] = `
[
  "workspace: Workspace and configuration",
  "verification: Verification labels",
  "skills: Installed skills",
  "path: Command name on PATH",
  "repository: Git repository",
  "runtime: Node version",
]
`;

exports[`контракт машинного вывода проверки установки > doctor на здоровой установке > doctor: ключи checks 1`] = `
[
  "findings",
  "id",
  "title",
]
`;

exports[`контракт машинного вывода проверки установки > doctor на здоровой установке > doctor: ключи data 1`] = `
[
  "checks",
  "findings",
  "nextStep",
  "outputVersion",
  "summary",
  "version",
  "workspaceRoot",
]
`;

exports[`контракт машинного вывода проверки установки > doctor на здоровой установке > doctor: ключи summary 1`] = `
[
  "checksPassed",
  "checksTotal",
  "findingsTotal",
]
`;

exports[`контракт машинного вывода проверки установки > doctor с находкой о файле > doctor: ключи findings 1`] = `
[
  "level",
  "message",
  "path",
  "rule",
]
`;
